--- a/_data/home.yml
+++ b/_data/home.yml
@@ -38,7 +38,6 @@ experience_entries:
 
   - title: Software Engineer Intern, Millspaw Electronics
     duration: May 2021 - May 2022
-    url: https://popsocial.app/
     entries:
       - title: Developed machine learning models for anomaly detection
         description: for failure in industrial systems
@@ -62,9 +61,9 @@ project_entries:
     url: monte-carlo-pricing
     desc: A tool to calculate the fair value of derivatives using monte carlo simulations
 
-  - title: Diversidy
-    url: diversidy
-    desc: A full stack web app that helps users diversify their investment portfolios
+  # - title: Diversidy
+  #   url: diversidy
+  #   desc: A full stack web app that helps users diversify their investment portfolios
 
 
 education_entries:
