--- a/_data/home.yml
+++ b/_data/home.yml
@@ -62,7 +62,7 @@ project_entries:
     desc: A tool to calculate the fair value of derivatives using monte carlo simulations
 
   - title: Diversidy
-    url: diversidy
+    url: diversidy-app
     desc: A full stack web app that helps users diversify their investment portfolios
 
 
