--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ twitter_username: aaron10l
 
 permalink: /:slug.html
 
-favicon: "./logo.png" # relative path to site's favicon
+favicon: "./favicon.ico" # relative path to site's favicon
 # goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
 
 # Build settings
