--- a/_data/home.yml
+++ b/_data/home.yml
@@ -88,7 +88,7 @@ footer_entries:
     url: https://github.com/aaron10l
     icon: fab fa-github
 
-  - title: facebook
+  - title: twitter
     url: https://twitter.com/aaron10l
     icon: fab fa-twitter
 
