--- a/_data/home.yml
+++ b/_data/home.yml
@@ -94,7 +94,7 @@ footer_entries:
     icon: fab fa-github
 
   - title: twitter
-    url: https://twitter.com/aaron10l
+    url: https://twitter.com/aarona1varez
     icon: fab fa-twitter
 
 misc_entries:
