--- a/_data/home.yml
+++ b/_data/home.yml
@@ -12,6 +12,17 @@ navbar_entries:
     url: blog
 
 experience_entries:
+  - title: Software Engineer Intern, Netflix
+    duration: May 2025 - Aug 2025
+    url: false
+    entries:
+      - title: Worked on visibility improvements into Netflix device testing labs
+        description: using TypeScript. Deployed into an internal tool used across teams
+        url: false
+      - title: Investigated install timeout failures in the device labs
+        description: using Elasticsearch logs
+        url: false
+
   - title: Software Engineer Intern, Chan Zuckerberg Biohub
     duration: May 2024 - Aug 2024
     url: false
@@ -89,7 +100,6 @@ project_entries:
     url: reddit-free-lunch
     desc: a bot that lets you know when free food is posted on reddit
 
-
 education_entries:
   - title: University of Cincinnati
     duration: Expected May 2026
@@ -100,10 +110,6 @@ education_entries:
         url: false
 
 footer_entries:
-  # - title: resume
-  #   url: https://aaron10l.github.io/resume
-  #   icon: fas fa-file
-
   - title: linkedin
     url: https://www.linkedin.com/in/aaronisme
     icon: fab fa-linkedin
